-------
v4.2.28
-------

[mjr] Fix regression in display of clickable event URL property (Bug #14941).
|+


-------
v4.2.27
-------

[mjr] Remove erroneously added patch file.


-------
v4.2.26
-------

[mjr] Remove hard coded end date for calendar feed and allow it to be specified
      in url.


-------
v4.2.25
-------

[mjr] SECURITY: Fix XSS vulnerability in resource group property view (Bug
      #14857).
[mjr] SECURITY: Fix XSS vulnerability in event URL field (Bug #14857).


-------
v4.2.24
-------

[jan] Fix displaying event start time in calendar feed if using 12-hours time
      format.
[jan] Fix SCHEDULE-AGENT setting if there is only one attendee.
[mjr] Prevent fatal error if calendar not found during DAV sync.
[jan] Fix regression in exporting single tags to iCalendar CATEGORIES (Bug
      #14698).


-------
v4.2.23
-------

[jan] Officially support PHP 7.
[jan] Fix time offsets when importing CSV data with two-digit years.
[jan] Fix updating and deleting events from external CalDAV servers
      (martin1@k0k.net, Bug #14021).
[jan] Fix exporting multiple tags to iCalendar CATEGORIES (Bug #14057).


-------
v4.2.22
-------

[jan] SECURITY: Fix open redirects.
[mjr] Prevent broken iCalendar files from causing fatal errors (Bug #14672).
[jan] Work around calendar servers advertising as CalDAV-capable, but ignoring
      CalDAV requests (Bug #14662).
[jan] Fix displaying yesterday's event in Prior Events portal block
      (admin@layertec.de, Bug #14638).


-------
v4.2.21
-------

[mjr] Don't hide the reservee's identity on the resource calendar (Bug #14609).


-------
v4.2.20
-------

[mjr] Fix saving sync preference when no default calendar exists (Bug #14585).
[mjr] Fix display of date in ITIP_CANCEL notifications of deleted instances of
      recurring events (PR: 214, almarin@um.es).


-------
v4.2.19
-------

[mjr] Fix allowing ics import on when user has edit permissions on a shared
      calendar (Bug #14501).