@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [mjr] SECURITY: Don&apos;t leak private details when sending notifications for private events (Bug #15011).
 * [mjr] Fix regression in display of clickable event URL property (Bug #14941).
 * |+
  </notes>
@@ -1554,7 +1555,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] Don&apos;t display delete links in month view; slimmer UI.
 * [jon] Silence session_start warnings.
@@ -1575,7 +1576,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] Allow all-day events and montly-on-weekday recurrence.
 * [cjh] Add a Horde summary API function.
@@ -1617,7 +1618,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [bjn] Change &apos;en&apos; and &apos;en_EN&apos; locales to &apos;en_US&apos; (default).
 * [jan] Add Brazilian Portuguese translation (Samuel Mota &lt;samuel@bumerangue.com&gt;).
@@ -1662,7 +1663,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Add Hungarian translation (Laszlo L. Tornoci &lt;torlasz@xenia.sote.hu&gt;).
 * [jan] Add Korean translation (J.I Kim &lt;aporie@netian.com&gt;).
@@ -1707,7 +1708,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] Kronolith_Event objects now know how to obtain their driver, rather than storing a reference. Makes for much smaller/better return values over XML-RPC, at least.
 * [cjh] Fix a bug in the spanning algorithm when there were two independant sets of overlapping events that were not common factors (i.e, a set of 2 events and a set of 3 events). Also start to document the row spanning code.
@@ -1743,7 +1744,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Fix broken image tag in day and week views.
 * [jan] Fix "New Category" selection in event edit view.
@@ -1760,7 +1761,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Fix some display bugs with recurring events in the sql driver (cjh).
    </notes>
@@ -1775,7 +1776,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] Fix a bug in the SQL driver preventing events from being displayed.
    </notes>
@@ -1790,7 +1791,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Fix display of category colors in week and day views (Björn Tackmann &lt;bjoern.tackmann@consultico.de&gt;).
 * [jan] Add Latvian translation (Ivars Stivrins &lt;ivars@kraslava.lv&gt;).
@@ -1807,7 +1808,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Close XSS when setting the parent frame&apos;s page title by javascript (cjh).
    </notes>
@@ -1822,7 +1823,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] Remote calendars are now parsed with the Horde_iCalendar library, which allows for much better iCalendar support, better handling of timezones, etc.
 * [cjh] The month view no longer shows blank boxes for days in the grid that are outside of the current month - instead, it goes back into the previous month and forward into the next month however many days are showable.
@@ -1864,7 +1865,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] The guts of Kronolith_Event objects are now based on Horde_Date objects instead of timestamps.
 * [cjh] Lots of date-related functions moved to the Horde_Date class.
@@ -1887,7 +1888,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] Fix the menubar popup date navigator on the New Event screen.
 * [cjh] Remove unused specialized notification listener.
@@ -1908,7 +1909,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Fix recurring events from remote calendars (Bug #559).
 * [cjh] The menubar Goto popup is now always on top of &lt;select&gt; boxes, even in Internet Explorer (Bug #822).
@@ -1925,7 +1926,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] Add All Past as an option on simple searches.
 * [cjh] Add My Calendars menu entry.
@@ -1946,7 +1947,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] UIDs need to be stored in the History system with a kronolith: prefix and with the calendar so as not to confuse different instances of the same event (if two users both have a event on their seperate calendars, they should have unique histories for that event).
 * [cjh] The My Calendars page now has a tool for generating Free/Busy URLs (Bug #571).
@@ -1968,7 +1969,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] Fix one page load delay in showing new/removing deleted shares on the My Calendars screen (Bug #1048).
 * [cjh] Fix labeling of weekday columns in the Month view when the week starts on Monday and show_shared_side_by_side preference is on (Bug #1049).
@@ -1990,7 +1991,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Fix free/busy views with some languages (Bug #1036).
 * [cjh] Prevent infinite loops if events are set to recur weekly on no weekdays (Bug #1074).
@@ -2010,7 +2011,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Fix portal block for missing events at the turn of the year (Bug #1337).
    </notes>
@@ -2025,7 +2026,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Fix browsing through work weeks in attendees view (Bug #1852, tasin@fhm.edu).
 * [jan] Fix updating of attendee status in attendees view (Bug #1188).
@@ -2063,7 +2064,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Respect SMTP authentication settings when sending reminders and notifications (requires Horde 3.0.4).
 * [jan] Include date in reminder message (Bug #1855).
@@ -2080,7 +2081,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Fix navigation popup with Safari browsers (t.zell@gmx.de, Bug #2447).
 * [cjh] Fix infinite loop with some recurring events (Bug #2346).
@@ -2100,7 +2101,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Allow to import more than one event from iCalendar data at once.
 * [cjh] Avoid loops and other errors by immediately failing nextRecurrence() checking for any event with a recurInterval of 0 (Bug #2709).
@@ -2116,7 +2117,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Fix warnings with Internet Explorer on HTTPS connections.
 * [jan] Fix reminder emails.
@@ -2132,7 +2133,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] Close several XSS problems with calendar and event fields.
    </notes>
@@ -2147,7 +2148,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] SECURITY: Close arbitrary file inclusion in free/busy views.
    </notes>
@@ -2162,7 +2163,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] The calendar(s) to export data from are now configurable (Request #2330).
 * [jan] Add Portuguese translation (Manuel Menezes de Sequeira &lt;Manuel.Sequeira&gt;).
@@ -2208,7 +2209,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Show subscription URL for calendars in "My Calendars" overview (kevin_myer@iu13.org, Request #3256).
 * [jan] Fix browser redirection after saving events.
@@ -2224,7 +2225,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Fix retrieving of free/busy URLs from Kolab servers (tokoe@kde.org, Bug #3450).
 * [jan] Fix recurring events without end dates using the Kolab driver (tokoe@kde.org, Bug #2734).
@@ -2242,7 +2243,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] There are now several guards against users being stuck with no selected calendars and no way to select one (Bug #3538).
    </notes>
@@ -2257,7 +2258,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Fix updating attendee status from KOrganizer replies.
 * [jan] Fix events of status "free" being included in busy information.
@@ -2280,7 +2281,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Don&apos;t show calendar creation form if multiple calendars are not allowed (Bug #3988).
 * [jan] Add "Save and Finish" button to attendees popup (Request #1158).
@@ -2299,7 +2300,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] Set vEvent ORGANIZER to the event creator, not the calendar owner (kajtzu@basen.net, Bug #4527).
 * [jan] Fix importing of events without end date and duration (Bug #4519).
@@ -2328,7 +2329,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] SECURITY: Close arbitrary file inclusion in free/busy views.
    </notes>
@@ -2343,7 +2344,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Fix character set encoding of exported vCalendar/iCalendar data.
 * [jan] Fixed MS-SQL driver (Bug #5088).
@@ -2363,7 +2364,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] Display attendees list correctly without a mail/compose method (Bug #5127).
 * [cjh] Send iCalendar data as UTF-8 (Bug #5427).
@@ -2382,7 +2383,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] SECURITY: Fix privilege escalation in Horde API.
 * [cjh] SECURITY: Fix missing ownership validation on share changes.
@@ -2400,7 +2401,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] Add vCalendar 2.0 alarm export (munzli@olmero.ch, Bug #4851).
 * [jan] Add Ukrainian translation (Andriy Kopystyansky &lt;anri@polynet.lviv.ua&gt;).
@@ -2463,7 +2464,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Don&apos;t allow to modify private events throught the API (Bug #5736).
 * [jan] Don&apos;t overwrite event owner when changing events over WebDAV (Bug #5736).
@@ -2489,7 +2490,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] SECURITY: Fix privilege escalation in Horde API.
 * [cjh] SECURITY: Fix missing ownership validation on share changes.
@@ -2515,7 +2516,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [cjh] Apply fix for http://dev.rubyonrails.org/ticket/11473 to prototype.js (Request #6590).
 * [cjh] In WebDAV PUT operations, only look for existing events on the calendar being uploaded (Bug #6617).
@@ -2546,7 +2547,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Identify the correct event when using attend.php to update invitations (Bug #6606).
 * [cjh] Improve resource usage in datatree_to_sql share migration script (Bug #6740).
@@ -2564,7 +2565,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Send correct iTip notifications when deleting recurring event instances (Bug #6636).
 * [mjr] Add support for embedding calendar widgets on external websites.
@@ -2599,7 +2600,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Change group field in shares table to work with LDAP groups (Bug #6883).
 * [jan] Fix user name conversion with user hooks in the calendar panel (Bug #7366).
@@ -2617,7 +2618,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Render contact autocompletion list on top of free/busy blocks (Bug #7273).
 * [jan] Save recurrence exceptions when copying events (Bug #7689).
@@ -2649,7 +2650,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [mms] Upgrade prototype.js to v1.6.1.
 * [jan] Allow to add address lists as attendees through the address book popup (Bug #7834).
@@ -2673,7 +2674,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Fix editing URLs of remote calendars.
 * [gwr] Fix recurring weekly events with fixed number of occurences but multiple incidences per week (kolab/issue3846).
@@ -2697,7 +2698,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Delete Horde alarms when resetting an event alarm.
 * [jan] Set an alarm to one minute, if users try to set an alarm without time.
@@ -2714,7 +2715,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [gwr] Fix moving events between calendars for the Kolab driver (Bug #7932)
 * [jan] Import and export the privacy field in CSV data (Request #9139).
@@ -2734,7 +2735,7 @@
     <api/>
    </stability>
    <date/>
-   <license uri="" />
+   <license uri=""></license>
    <notes>
 * [jan] Add upgrade scripts for next-generation SQL share driver.
 * [jan] Export recurrence exceptions in a more portable way.
@@ -4244,9 +4245,10 @@
     <release>stable</release>
     <api>stable</api>
    </stability>
-   <date>2020-07-04</date>
+   <date>2019-01-08</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [mjr] SECURITY: Don&apos;t leak private details when sending notifications for private events (Bug #15011).
 * [mjr] Fix regression in display of clickable event URL property (Bug #14941).
 * |+
    </notes>
