@@ -2,6 +2,8 @@
 v4.2.28
 -------
 
+[mjr] SECURITY: Don't leak private details when sending notifications for
+      private events (Bug #15011).
 [mjr] Fix regression in display of clickable event URL property (Bug #14941).
 |+
 
